tests/ui/issues/issue-17373.stderr
error[E0614]: type `!` cannot be dereferenced
  --> $DIR/issue-17373.rs:2:5
   |
LL |     *return
   |     ^^^^^^^ can't be dereferenced

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0614`.
