tests/ui/issues/issue-17373.rs
fn main() {
    *return //~ ERROR type `!` cannot be dereferenced
    ;
}
